<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.elpuentesearcy</groupId>
    <artifactId>webapp</artifactId>
    <version>1.20.2</version>
    <name>el-puente</name>
    <description></description>

    <properties>
        <java.version>21</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>webjars-locator-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>jquery</artifactId>
            <version>3.3.1</version>
        </dependency>

        <dependency>
            <groupId>org.thymeleaf</groupId>
            <artifactId>thymeleaf</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>nz.net.ultraq.thymeleaf</groupId>
            <artifactId>thymeleaf-layout-dialect</artifactId>
        </dependency>

        <dependency>
            <groupId>com.github.dfabulich</groupId>
            <artifactId>sitemapgen4j</artifactId>
            <version>1.1.2</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>

        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>codepipeline</artifactId>
            <version>2.25.64</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>public-website</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.samaxes.maven</groupId>
                <artifactId>minify-maven-plugin</artifactId>
                <version>1.7.6</version>
                <dependencies>
                    <!-- https://mvnrepository.com/artifact/org.codehaus.plexus/plexus-utils -->
                    <dependency>
                        <groupId>org.codehaus.plexus</groupId>
                        <artifactId>plexus-utils</artifactId>
                        <version>4.0.0</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>default-minify</id>
                        <phase>prepare-package</phase>
                        <configuration>
                            <charset>UTF-8</charset>
                            <webappSourceDir>${basedir}/src/main/resources/static</webappSourceDir>
                            <webappTargetDir>${project.build.outputDirectory}/static</webappTargetDir>
                            <cssSourceDir>css</cssSourceDir>
                            <cssSourceFiles>
                                <cssSourceFile>bootstrap-overrides.css</cssSourceFile>
                                <cssSourceFile>cardColumns.css</cssSourceFile>
                                <cssSourceFile>cardView.css</cssSourceFile>
                                <cssSourceFile>changes.css</cssSourceFile>
                                <cssSourceFile>common.css</cssSourceFile>
                                <cssSourceFile>main.css</cssSourceFile>
                                <cssSourceFile>contactUs.css</cssSourceFile>
                                <cssSourceFile>aboutUs.css</cssSourceFile>
                                <cssSourceFile>getInvolved.css</cssSourceFile>
                                <cssSourceFile>resources.css</cssSourceFile>
                            </cssSourceFiles>
                            <cssTargetDir>css</cssTargetDir>
                            <cssFinalFile>prod.css</cssFinalFile>
                            <cssEngine>YUI</cssEngine>
                            <jsSourceDir>js</jsSourceDir>
                            <jsSourceFiles>
                                <jsSourceFile>cardView.js</jsSourceFile>
                                <jsSourceFile>changes.js</jsSourceFile>
                                <jsSourceFile>common.js</jsSourceFile>
                                <jsSourceFile>contactUs.js</jsSourceFile>
                                <jsSourceFile>facebookEmbed.js</jsSourceFile>
                            </jsSourceFiles>
                            <jsTargetDir>js</jsTargetDir>
                            <jsFinalFile>prod.js</jsFinalFile>
                            <jsEngine>CLOSURE</jsEngine>
                            <skipMerge>true</skipMerge>
                            <nosuffix>true</nosuffix>
                            <verbose>true</verbose>
                        </configuration>
                        <goals>
                            <goal>minify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
